<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">lifecounter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="PlayerOne">Player 1</string>
    <string name="PlayerOneLife">20</string>
    <string name="P1AddOneLife">+1</string>
    <string name="P1SubOneLife">-1</string>
    <string name="P1AddFiveLife">+5</string>
    <string name="P1SubFiveLife">-5</string>
    <string name="PlayerTwo">Player 2</string>
    <string name="PlayerTwoLife">20</string>
    <string name="P2AddOneLife">+1</string>
    <string name="P2SubOneLife">-1</string>
    <string name="P2AddFiveLife">+5</string>
    <string name="P2SubFiveLife">-5</string>
    <string name="PlayerThree">Player 3</string>
    <string name="PlayerThreeLife">20</string>
    <string name="P3AddOneLife">+1</string>
    <string name="P3SubOneLife">-1</string>
    <string name="P3AddFiveLife">+5</string>
    <string name="P3SubFiveLife">-5</string>
    <string name="PlayerFour">Player 4</string>
    <string name="PlayerFourLife">20</string>
    <string name="P4AddOneLife">+1</string>
    <string name="P4SubOneLife">-1</string>
    <string name="P4AddFiveLife">+5</string>
    <string name="P4SubFiveLife">-5</string>
    <string name="PlusOne">+</string>
    <string name="SubOne">-1</string>
    <string name="SubtractOne">-</string>

</resources>
